git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@40 9b274142-39a2-40f6-a478-1b104364ee40

--- a/configure.ac
+++ b/configure.ac
@@ -77,7 +77,7 @@ AC_CHECK_LIB([fries],[main],[echo "OK">/dev/null],[echo "" &&
                       echo "   Make sure libfries is" &&
                       echo "   installed and can be found in a standard path." &&
                       echo "   You may need to set LDFLAGS to specify search path." &&
-                      echo "" && exit])
+                      echo "" && exit],[-lpcre])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
