git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@47 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -98,4 +98,4 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/ca/grammar-dep.dat
 
 #### Dependence Parser options
-DepRulesFile=$FREELINGSHARE/ca/dep/dependences.dat
+DepTxalaFile=$FREELINGSHARE/ca/dep/dependences.dat
