--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -98,4 +98,4 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/en/chunker/grammar.dat
 
 #### Dependence Parser options
-DepRulesFile=$FREELINGSHARE/en/dep/dependences.dat
+DepTxalaFile=$FREELINGSHARE/en/dep/dependences.dat
