--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -98,5 +98,5 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/gl/grammar-dep.dat
 
 #### Dependence Parser options
-DepRulesFile=$FREELINGSHARE/gl/dep/dependences.dat
+DepTxalaFile=$FREELINGSHARE/gl/dep/dependences.dat
 
