--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -98,5 +98,5 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/it/grammar.dat
 
 #### Dependence Parser options
-DepRulesFile=$FREELINGSHARE/it/dependences.dat
+DepTxalaFile=$FREELINGSHARE/it/dependences.dat
 
