--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -98,5 +98,5 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/es/grammar-dep.dat
 
 #### Dependence Parser options
-DepRulesFile=$FREELINGSHARE/es/dep/dependences.dat
+DepTxalaFile=$FREELINGSHARE/es/dep/dependences.dat
 
