intregating malt_plugin

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -98,4 +98,6 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/ca/grammar-dep.dat
 
 #### Dependence Parser options
+DepParser=txala
 DepTxalaFile=$FREELINGSHARE/ca/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/ca/malt/malt.dat
