--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -98,4 +98,6 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/en/chunker/grammar.dat
 
 #### Dependence Parser options
+DepParser=txala
 DepTxalaFile=$FREELINGSHARE/en/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/en/malt/malt.dat
