--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -98,5 +98,7 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/it/grammar.dat
 
 #### Dependence Parser options
-DepTxalaFile=$FREELINGSHARE/it/dependences.dat
+DepParser=txala
+DepTxalaFile=$FREELINGSHARE/it/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/it/malt/malt.dat
 
