--- a/APIs/java/Makefile
+++ b/APIs/java/Makefile
@@ -4,7 +4,7 @@ JAVADIR = /usr/lib/jvm/java-6-sun
 SWIGDIR = /usr/share/swig/1.3
 
 libmorfo_java.so: libmorfo_wrap.cxx
-	g++ -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
+	g++ -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries -I /usr/include/db4 -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
 	cp classes_aux/* morfo/
 	javac morfo/*.java
 	jar -cf libmorfo_java.jar morfo
