--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -98,5 +98,7 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/es/grammar-dep.dat
 
 #### Dependence Parser options
+DepParser=txala
 DepTxalaFile=$FREELINGSHARE/es/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/es/malt/malt.dat
 
