--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -98,5 +98,8 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/gl/grammar-dep.dat
 
 #### Dependence Parser options
+DepParser=txala
 DepTxalaFile=$FREELINGSHARE/gl/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/gl/malt/malt.dat
+
 
