git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@65 9b274142-39a2-40f6-a478-1b104364ee40

--- a/configure.ac
+++ b/configure.ac
@@ -120,6 +120,9 @@ AC_ARG_ENABLE([maltplugin],
               ],
 	      [AM_CONDITIONAL([ENABLE_MALT],[test 0 = 1])])
 
+
+AM_CONDITIONAL(OS_SOLARIS, [test x"$host_os" = xsolaris])
+
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_LIBTOOL
