git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@66 9b274142-39a2-40f6-a478-1b104364ee40

--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([FreeLing],[2.1-alfa2])
+AC_INIT([FreeLing],[2.1-alfa3])
 AC_PREREQ(2.59)
-AM_INIT_AUTOMAKE(FreeLing,2.1-alfa2)
+AM_INIT_AUTOMAKE(FreeLing,2.1-alfa3)
 
 AC_CANONICAL_HOST	
 AC_CONFIG_SRCDIR([src/main/analyzer.cc])
@@ -148,16 +148,16 @@ AC_CHECK_HEADERS([db_cxx.h],[],[echo "" && echo "   db_cxx.h not found." &&
                       echo "   installed and can be found in a standard path." &&
                       echo "   You may need to set CPPFLAGS to specify search path." &&
                       echo "" && exit])
-AC_CHECK_HEADERS([omlet.h],[],[echo "" && echo "   omlet.h not found." &&
-                      echo "   Make sure libomlet headers are installed" &&
-                      echo "   and can be found in a standard path." &&
-                      echo "   You may need to set CPPFLAGS to specify search path." &&
-                      echo "" && exit])
-AC_CHECK_HEADERS([fries.h],[],[echo "" && echo "   fries.h not found." &&
-                      echo "   Make sure libfries headers are installed" &&
-                      echo "   and can be found in a standard path." &&
-                      echo "   You may need to set CPPFLAGS to specify search path." &&
-                      echo "" && exit])
+#AC_CHECK_HEADERS([omlet.h],[],[echo "" && echo "   omlet.h not found." &&
+#                      echo "   Make sure libomlet headers are installed" &&
+#                      echo "   and can be found in a standard path." &&
+#                      echo "   You may need to set CPPFLAGS to specify search path." &&
+#                      echo "" && exit])
+#AC_CHECK_HEADERS([fries.h],[],[echo "" && echo "   fries.h not found." &&
+#                      echo "   Make sure libfries headers are installed" &&
+#                      echo "   and can be found in a standard path." &&
+#                      echo "   You may need to set CPPFLAGS to specify search path." &&
+#                      echo "" && exit])
 
 # Checks for libraries.
 AC_CHECK_LIB([cfg+],[main],[echo "OK">/dev/null],[echo "" && 
@@ -178,18 +178,18 @@ AC_CHECK_LIB([db_cxx],[main],[echo "OK">/dev/null],[echo "" &&
                       echo "   installed and can be found in a standard path." &&
                       echo "   You may need to set LDFLAGS to specify search path." &&
                       echo "" && exit])
-AC_CHECK_LIB([omlet],[main],[echo "OK">/dev/null],[echo "" &&
-                      echo "   Omlet library not found." &&
-                      echo "   Make sure libomlet is" &&
-                      echo "   installed and can be found in a standard path." &&
-                      echo "   You may need to set LDFLAGS to specify search path." &&
-                      echo "" && exit])
-AC_CHECK_LIB([fries],[main],[echo "OK">/dev/null],[echo "" &&
-                      echo "   Fries library not found." &&
-                      echo "   Make sure libfries is" &&
-                      echo "   installed and can be found in a standard path." &&
-                      echo "   You may need to set LDFLAGS to specify search path." &&
-                      echo "" && exit],[-lpcre])
+#AC_CHECK_LIB([omlet],[main],[echo "OK">/dev/null],[echo "" &&
+#                      echo "   Omlet library not found." &&
+#                      echo "   Make sure libomlet is" &&
+#                      echo "   installed and can be found in a standard path." &&
+#                      echo "   You may need to set LDFLAGS to specify search path." &&
+#                      echo "" && exit])
+#AC_CHECK_LIB([fries],[main],[echo "OK">/dev/null],[echo "" &&
+#                      echo "   Fries library not found." &&
+#                      echo "   Make sure libfries is" &&
+#                      echo "   installed and can be found in a standard path." &&
+#                      echo "   You may need to set LDFLAGS to specify search path." &&
+#                      echo "" && exit],[-lpcre])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -208,6 +208,10 @@ AC_CONFIG_FILES([Makefile
                  src/libmorfo/Makefile
                  src/main/Makefile
                  src/utilities/Makefile])
+
+AC_CONFIG_SUBDIRS([libfries])
+AC_CONFIG_SUBDIRS([libomlet])
+
 AC_OUTPUT
 
 
