git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@70 9b274142-39a2-40f6-a478-1b104364ee40

--- a/configure.ac
+++ b/configure.ac
@@ -133,11 +133,11 @@ AC_LANG([C++])
 
 
 # Checks for header files.
-AC_CHECK_HEADERS([cfg+.h],[],[echo "" && echo "   cfg+.h not found." &&
-                      echo "   Make sure libcfg+ headers are installed" &&
-                      echo "   and can be found in a standard path." &&
-                      echo "   You may need to set CPPFLAGS to specify search path." &&
-                      echo "" && exit])
+#AC_CHECK_HEADERS([cfg+.h],[],[echo "" && echo "   cfg+.h not found." &&
+#                      echo "   Make sure libcfg+ headers are installed" &&
+#                      echo "   and can be found in a standard path." &&
+#                      echo "   You may need to set CPPFLAGS to specify search path." &&
+#                      echo "" && exit])
 AC_CHECK_HEADERS([pcre.h],[],[echo "" && echo "   pcre.h not found." &&
                       echo "   Make sure pcre headers for C++ are" &&
                       echo "   installed and can be found in a standard path." &&
@@ -160,12 +160,12 @@ AC_CHECK_HEADERS([db_cxx.h],[],[echo "" && echo "   db_cxx.h not found." &&
 #                      echo "" && exit])
 
 # Checks for libraries.
-AC_CHECK_LIB([cfg+],[main],[echo "OK">/dev/null],[echo "" && 
-                      echo "   cfg+ library not found." &&
-                      echo "   Make sure libcfg+ is installed and" &&
-                      echo "   can be found in a standard path." &&
-                      echo "   You may need to set LDFLAGS to specify search path." &&
-                      echo "" && exit])
+#AC_CHECK_LIB([cfg+],[main],[echo "OK">/dev/null],[echo "" && 
+#                      echo "   cfg+ library not found." &&
+#                      echo "   Make sure libcfg+ is installed and" &&
+#                      echo "   can be found in a standard path." &&
+#                      echo "   You may need to set LDFLAGS to specify search path." &&
+#                      echo "" && exit])
 AC_CHECK_LIB([pcre],[main],[echo "OK">/dev/null],[echo "" && 
                       echo "   pcre library not found." &&
                       echo "   Make sure libpcre is installed and" &&
@@ -209,6 +209,7 @@ AC_CONFIG_FILES([Makefile
                  src/main/Makefile
                  src/utilities/Makefile])
 
+AC_CONFIG_SUBDIRS([libcfg+])
 AC_CONFIG_SUBDIRS([libfries])
 AC_CONFIG_SUBDIRS([libomlet])
 
