--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
 EXTRA_DIST = data doc APIs LICENSES libomlet
-SUBDIRS = libfries libomlet src data doc 
+SUBDIRS = libcfg+ libfries libomlet src data doc 
 
