--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = config.h sample.cc LKB analyze.utf analyze.server analyze initialize README
-INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/libfries/src/include -I$(top_srcdir)/libomlet/src/include -I$(top_srcdir)/libcfg+/src
+INCLUDES = -I$(top_srcdir)/src/include
 bin_PROGRAMS = analyzer
 
 analyzer_SOURCES = analyzer.cc
@@ -10,7 +10,7 @@ else
   LJVM =
 endif
 analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx $(LJVM)
-analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libomlet/src/libomlet -L$(top_srcdir)/libfries/src/libfries -L$(top_srcdir)/libcfg+/src
+analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo
 
 install-exec-hook:
 	cp analyze analyze.utf analyze.server initialize $(bindir)
