--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -63,7 +63,6 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/es/locucions.dat 
@@ -71,9 +70,12 @@ QuantitiesFile=$FREELINGSHARE/es/quantities.dat
 SuffixFile=$FREELINGSHARE/es/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/es/maco.db
-NPDataFile=$FREELINGSHARE/es/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+
+## NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/es/np.dat
 
 ## NEC options
 NEClassification=no
