correct congi file for new NER

--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -65,7 +65,7 @@ DictionarySearch=yes
 ProbabilityAssignment=yes
 DecimalPoint=","
 ThousandPoint="."
-LocutionsFile=/home/mpadro/freeling/data/es/locucions.dat 
+LocutionsFile=$FREELINGSHARE/es/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/es/quantities.dat
 SuffixFile=$FREELINGSHARE/es/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
@@ -74,8 +74,8 @@ PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
 
 ## NER options
-NERecognition=bio
-NPDataFile=/home/mpadro/freeling/data/es/ner/ner.dat
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/es/np.dat
 
 ## NEC options
 NEClassification=no
