All config files prepared for new NER.
git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@106 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -63,7 +63,6 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/ca/locucions.dat 
@@ -71,9 +70,12 @@ QuantitiesFile=$FREELINGSHARE/ca/quantities.dat
 SuffixFile=$FREELINGSHARE/ca/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/ca/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/ca/maco.db
-NPDataFile=$FREELINGSHARE/ca/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+
+## NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/ca/np.dat
 
 ## NEC options
 NEClassification=no
