--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -63,7 +63,6 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/gl/locucions.dat 
@@ -71,9 +70,12 @@ QuantitiesFile=$FREELINGSHARE/gl/quantities.dat
 SuffixFile=$FREELINGSHARE/gl/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/gl/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/gl/maco.db
-NPDataFile=$FREELINGSHARE/gl/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+
+## NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/gl/np.dat
 
 ## NEC options
 NEClassification=no
