--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -63,17 +63,19 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/it/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/it/quantities.dat
 SuffixFile=$FREELINGSHARE/it/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/it/probabilitats.dat
-DictionaryFile=$FREELINGSHARE/it/maco.db
 NPDataFile=$FREELINGSHARE/it/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+
+## NER options
+NERecognition=basic
+DictionaryFile=$FREELINGSHARE/it/maco.db
 
 ## NEC options
 NEClassification=no
