--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -63,7 +63,6 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/en/locucions.dat 
@@ -71,9 +70,12 @@ QuantitiesFile=$FREELINGSHARE/en/quantities.dat
 SuffixFile=$FREELINGSHARE/en/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/en/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/en/maco.db
-NPDataFile=$FREELINGSHARE/en/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+
+## NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/en/np.dat
 
 ## NEC options
 NEClassification=no
