All config files according to new NER.
git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@107 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -72,8 +72,7 @@ ProbabilityFile=$FREELINGSHARE/ca/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/ca/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-
-## NER options
+# NER options
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/ca/np.dat
 
