--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -72,8 +72,7 @@ ProbabilityFile=$FREELINGSHARE/gl/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/gl/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-
-## NER options
+# NER options
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/gl/np.dat
 
