--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -72,8 +72,7 @@ ProbabilityFile=$FREELINGSHARE/it/probabilitats.dat
 NPDataFile=$FREELINGSHARE/it/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-
-## NER options
+# NER options
 NERecognition=basic
 DictionaryFile=$FREELINGSHARE/it/maco.db
 
