--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -72,8 +72,7 @@ ProbabilityFile=$FREELINGSHARE/en/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/en/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-
-## NER options
+# NER options
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/en/np.dat
 
