--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -72,8 +72,7 @@ ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-
-## NER options
+# NER options
 NERecognition=basic
 NPDataFile=$FREELINGSHARE/es/np.dat
 
