git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@134 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -86,7 +86,7 @@ SenseFile=$FREELINGSHARE/cy/senses16.db
 DuplicateAnalysis=false
 
 #### Tagger options
-Tagger=relax
+Tagger=hmm
 TaggerHMMFile=$FREELINGSHARE/cy/tagger.dat
 TaggerRelaxFile=$FREELINGSHARE/cy/constr_gram.dat
 TaggerRelaxMaxIter=500
