Modul de coreferencia, model i utilitats per processar el corpus AnCora i generar els models.
git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@143 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -23,6 +23,8 @@ esnecdatadir = $(pkgdatadir)/es/nec
 esnecdata_DATA = es/nec/*
 esdepdatadir = $(pkgdatadir)/es/dep
 esdepdata_DATA = es/dep/*
+escorefdatadir = $(pkgdatadir)/es/coref
+escorefdata_DATA = es/coref/*
 
 cadatadir = $(pkgdatadir)/ca
 cadata_DATA = ca/*
