--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -102,3 +102,7 @@ GrammarFile=$FREELINGSHARE/ca/grammar-dep.dat
 DepParser=txala
 DepTxalaFile=$FREELINGSHARE/ca/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/ca/malt/malt.dat
+
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/ca/coref/coref.dat
