--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -102,3 +102,7 @@ GrammarFile=$FREELINGSHARE/cy/chunker/grammar.dat
 DepParser=txala
 DepTxalaFile=$FREELINGSHARE/cy/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/cy/malt/malt.dat
+
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/cy/coref/coref.dat
