--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -102,3 +102,7 @@ GrammarFile=$FREELINGSHARE/en/chunker/grammar-dep.dat
 DepParser=txala
 DepTxalaFile=$FREELINGSHARE/en/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/en/malt/malt.dat
+
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/en/coref/coref.dat
