--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -103,3 +103,6 @@ DepParser=txala
 DepTxalaFile=$FREELINGSHARE/es/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/es/malt/malt.dat
 
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/es/coref/coref.dat
