--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -103,4 +103,6 @@ DepParser=txala
 DepTxalaFile=$FREELINGSHARE/gl/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/gl/malt/malt.dat
 
-
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/gl/coref/coref.dat
