--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -103,3 +103,6 @@ DepParser=txala
 DepTxalaFile=$FREELINGSHARE/it/dep/dependences.dat
 DepMaltFile=$FREELINGSHARE/it/malt/malt.dat
 
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFilePrefix=$FREELINGSHARE/it/coref/coref.dat
