git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@198 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/cy/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/cy/coref/coref.dat
+CorefFile=$FREELINGSHARE/cy/coref/coref.dat
