--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/es/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/es/coref/coref.dat
+CorefFile=$FREELINGSHARE/es/coref/coref.dat
