--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/gl/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/gl/coref/coref.dat
+CorefFile=$FREELINGSHARE/gl/coref/coref.dat
