--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/ca/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/ca/coref/coref.dat
+CorefFile=$FREELINGSHARE/ca/coref/coref.dat
