--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/en/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/en/coref/coref.dat
+CorefFile=$FREELINGSHARE/en/coref/coref.dat
