--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -105,4 +105,4 @@ DepMaltFile=$FREELINGSHARE/it/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFilePrefix=$FREELINGSHARE/it/coref/coref.dat
+CorefFile=$FREELINGSHARE/it/coref/coref.dat
