--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -70,9 +70,8 @@ install-data-hook:
 	   $(ZCAT) -f $(pkgdatadir)/$$lg/dicc.src | $(bindir)/indexdict $(pkgdatadir)/$$lg/maco.db; \
 	   chmod +r $(pkgdatadir)/$$lg/maco.db; \
 	   echo "...Indexing "$$lg" sense dictionary, please wait."; \
-	   for v in $(pkgdatadir)/$$lg/senses*.src.gz $(pkgdatadir)/$$lg/senses*.src; do \
-             src=`echo $$v | sed 's/.gz//' `; \
-             name=`echo $$v | sed 's/.gz//' | sed 's/.src//' `; \
+	   for src in $(pkgdatadir)/$$lg/senses*.src; do \
+             name=`echo $$src | sed 's/.src//' `; \
              rm -f $$name.db; \
 	     $(ZCAT) -f $$src | $(bindir)/indexdict $$name.db; \
 	     chmod +r $$name.db; \
