Models bons de bioner castella. Makefile.am modifcat perque copii els fitxers de ner a FREELINGSHARE Config file per usar bioner pel castella (es.cfg)
git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@212 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -21,6 +21,8 @@ esdatadir = $(pkgdatadir)/es
 esdata_DATA = es/*
 esnecdatadir = $(pkgdatadir)/es/nec
 esnecdata_DATA = es/nec/*
+esnerdatadir = $(pkgdatadir)/es/ner
+esnerdata_DATA = es/ner/*
 esdepdatadir = $(pkgdatadir)/es/dep
 esdepdata_DATA = es/dep/*
 escorefdatadir = $(pkgdatadir)/es/coref
