--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -73,8 +73,8 @@ DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
 # NER options
-NERecognition=bio
-NPDataFile=$FREELINGSHARE/es/ner/ner.dat
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/es/np.dat
 
 ## NEC options
 NEClassification=no
