--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -73,8 +73,12 @@ DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
 # NER options
-NERecognition=basic
-NPDataFile=$FREELINGSHARE/es/np.dat
+NERecognition=bio
+NPDataFile=$FREELINGSHARE/es/ner/ner.dat
+## --- comment above lines and uncomment those below, if you want 
+## --- a simpler NE recognizer (lower accuracy, higher speed)
+#NERecognition=basic
+#NPDataFile=$FREELINGSHARE/es/np.dat
 
 ## NEC options
 NEClassification=no
