--- a/APIs/java/Makefile
+++ b/APIs/java/Makefile
@@ -2,9 +2,10 @@ FREELINGDIR = /home/padro/package/usr/local
 SWIGDIR = /usr/share/swig1.3
 JAVADIR = /usr/lib/jvm/java-6-sun
 LIBSDIR = /usr/local
+GCC=g++-4.2
 
 libmorfo_java.so: libmorfo_wrap.cxx
-	g++ -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries -I /usr/include/db4 -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
+	$(GCC) -shared -o libmorfo_java.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lomlet -lfries -I /usr/include/db4 -L $(FREELINGDIR)/lib  -I $(FREELINGDIR)/include -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(JAVADIR)/include -I $(JAVADIR)/include/linux
 	cp classes_aux/* morfo/
 	javac morfo/*.java
 	jar -cf libmorfo_java.jar morfo
