--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -72,13 +72,13 @@ ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
-# NER options
-NERecognition=bio
-NPDataFile=$FREELINGSHARE/es/ner/ner.dat
-## --- comment above lines and uncomment those below, if you want 
-## --- a simpler NE recognizer (lower accuracy, higher speed)
-#NERecognition=basic
-#NPDataFile=$FREELINGSHARE/es/np.dat
+#NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/es/np.dat
+## --- comment lines above and uncomment those below, if you want 
+## --- a better NE recognizer (higer accuracy, lower speed)
+#NERecognition=bio
+#3PDataFile=$FREELINGSHARE/es/ner/ner.dat
 
 ## NEC options
 NEClassification=no
