git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@237 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -55,7 +55,7 @@ TokenizerFile=$FREELINGSHARE/cy/tokenizer.dat
 SplitterFile="$FREELINGSHARE/cy/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/cy/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/cy/quantities.dat
-SuffixFile=$FREELINGSHARE/cy/sufixos.dat
+AffixFile=$FREELINGSHARE/cy/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/cy/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/cy/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
