--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -55,7 +55,7 @@ TokenizerFile=$FREELINGSHARE/en/tokenizer.dat
 SplitterFile="$FREELINGSHARE/en/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/en/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/en/quantities.dat
-SuffixFile=$FREELINGSHARE/en/sufixos.dat
+AffixFile=$FREELINGSHARE/en/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/en/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/en/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
