--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -55,7 +55,7 @@ TokenizerFile="$FREELINGSHARE/es/tokenizer.dat"
 SplitterFile="$FREELINGSHARE/es/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/es/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/es/quantities.dat
-SuffixFile=$FREELINGSHARE/es/sufixos.dat
+AffixFile=$FREELINGSHARE/es/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
