--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -55,7 +55,7 @@ TokenizerFile="$FREELINGSHARE/gl/tokenizer.dat"
 SplitterFile="$FREELINGSHARE/gl/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/gl/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/gl/quantities.dat
-SuffixFile=$FREELINGSHARE/gl/sufixos.dat
+AffixFile=$FREELINGSHARE/gl/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/gl/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/gl/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
