--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -55,7 +55,7 @@ TokenizerFile="$FREELINGSHARE/it/tokenizer.dat"
 SplitterFile="$FREELINGSHARE/it/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/it/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/it/quantities.dat
-SuffixFile=$FREELINGSHARE/it/sufixos.dat
+AffixFile=$FREELINGSHARE/it/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/it/probabilitats.dat
 NPDataFile=$FREELINGSHARE/it/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
