--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -55,7 +55,7 @@ TokenizerFile="$FREELINGSHARE/ca/tokenizer.dat"
 SplitterFile="$FREELINGSHARE/ca/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/ca/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/ca/quantities.dat
-SuffixFile=$FREELINGSHARE/ca/sufixos.dat
+AffixFile=$FREELINGSHARE/ca/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/ca/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/ca/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
