git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@250 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/pt.cfg
+++ b/data/config/pt.cfg
@@ -49,13 +49,13 @@ OutputFormat=tagged
 AlwaysFlush=no
 
 #### Tokenizer options
-TokenizerFile="$FREELINGSHARE/pt/tokenizer.dat"
+TokenizerFile="$FREELINGSHARE/es/tokenizer.dat"
 
 #### Splitter options
 SplitterFile="$FREELINGSHARE/pt/splitter.dat"
 
 #### Morfo options
-SuffixAnalysis=yes
+AffixAnalysis=yes
 MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
@@ -63,17 +63,22 @@ DatesDetection=yes
 QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-NERecognition=yes
 DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/pt/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/pt/quantities.dat
-SuffixFile=$FREELINGSHARE/pt/sufixos.dat
+AffixFile=$FREELINGSHARE/pt/sufixos.dat
 ProbabilityFile=$FREELINGSHARE/pt/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/pt/maco.db
-NPDataFile=$FREELINGSHARE/pt/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
+#NER options
+NERecognition=basic
+NPDataFile=$FREELINGSHARE/pt/np.dat
+## --- comment lines above and uncomment those below, if you want 
+## --- a better NE recognizer (higer accuracy, lower speed)
+#NERecognition=bio
+#3PDataFile=$FREELINGSHARE/pt/ner/ner.dat
 
 ## NEC options
 NEClassification=no
@@ -98,5 +103,10 @@ TaggerForceSelect=retok
 GrammarFile=$FREELINGSHARE/pt/grammar-dep.dat
 
 #### Dependence Parser options
-HeuristicsFile=$FREELINGSHARE/pt/dependences.dat
+DepParser=txala
+DepTxalaFile=$FREELINGSHARE/pt/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/pt/malt/malt.dat
 
+#### Coreference Solver options
+CoreferenceResolution=no
+CorefFile=$FREELINGSHARE/pt/coref/coref.dat
