git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@251 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/ca/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/ca/quantities.dat
-AffixFile=$FREELINGSHARE/ca/sufixos.dat
+AffixFile=$FREELINGSHARE/ca/afixos.dat
 ProbabilityFile=$FREELINGSHARE/ca/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/ca/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
