--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -67,7 +67,7 @@ DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/en/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/en/quantities.dat
-AffixFile=$FREELINGSHARE/en/sufixos.dat
+AffixFile=$FREELINGSHARE/en/afixos.dat
 ProbabilityFile=$FREELINGSHARE/en/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/en/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
