--- a/data/config/es.cfg
+++ b/data/config/es.cfg
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/es/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/es/quantities.dat
-AffixFile=$FREELINGSHARE/es/sufixos.dat
+AffixFile=$FREELINGSHARE/es/afixos.dat
 ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/es/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
