--- a/data/config/pt.cfg
+++ b/data/config/pt.cfg
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/pt/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/pt/quantities.dat
-AffixFile=$FREELINGSHARE/pt/sufixos.dat
+AffixFile=$FREELINGSHARE/pt/afixos.dat
 ProbabilityFile=$FREELINGSHARE/pt/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/pt/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
