--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -67,7 +67,7 @@ DecimalPoint="."
 ThousandPoint=","
 LocutionsFile=$FREELINGSHARE/cy/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/cy/quantities.dat
-AffixFile=$FREELINGSHARE/cy/sufixos.dat
+AffixFile=$FREELINGSHARE/cy/afixos.dat
 ProbabilityFile=$FREELINGSHARE/cy/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/cy/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
