--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/gl/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/gl/quantities.dat
-AffixFile=$FREELINGSHARE/gl/sufixos.dat
+AffixFile=$FREELINGSHARE/gl/afixos.dat
 ProbabilityFile=$FREELINGSHARE/gl/probabilitats.dat
 DictionaryFile=$FREELINGSHARE/gl/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
