--- a/data/config/it.cfg
+++ b/data/config/it.cfg
@@ -67,7 +67,7 @@ DecimalPoint=","
 ThousandPoint="."
 LocutionsFile=$FREELINGSHARE/it/locucions.dat 
 QuantitiesFile=$FREELINGSHARE/it/quantities.dat
-AffixFile=$FREELINGSHARE/it/sufixos.dat
+AffixFile=$FREELINGSHARE/it/afixos.dat
 ProbabilityFile=$FREELINGSHARE/it/probabilitats.dat
 NPDataFile=$FREELINGSHARE/it/np.dat
 PunctuationFile=$FREELINGSHARE/common/punct.dat
