--- a/data/config/as.cfg
+++ b/data/config/as.cfg
@@ -1,9 +1,9 @@
 ##
-#### default configuration file for Portuguese analyzer
+#### default configuration file for Asturian analyzer
 ##
 
 #### General options 
-Lang=pt
+Lang=as
 
 #### Trace options. Only effective if we have compiled with -DVERBOSE
 #
@@ -49,10 +49,10 @@ OutputFormat=tagged
 AlwaysFlush=no
 
 #### Tokenizer options
-TokenizerFile="$FREELINGSHARE/es/tokenizer.dat"
+TokenizerFile="$FREELINGSHARE/as/tokenizer.dat"
 
 #### Splitter options
-SplitterFile="$FREELINGSHARE/pt/splitter.dat"
+SplitterFile="$FREELINGSHARE/as/splitter.dat"
 
 #### Morfo options
 AffixAnalysis=yes
@@ -65,34 +65,34 @@ DictionarySearch=yes
 ProbabilityAssignment=yes
 DecimalPoint=","
 ThousandPoint="."
-LocutionsFile=$FREELINGSHARE/pt/locucions.dat 
-QuantitiesFile=$FREELINGSHARE/pt/quantities.dat
-AffixFile=$FREELINGSHARE/pt/afixos.dat
-ProbabilityFile=$FREELINGSHARE/pt/probabilitats.dat
-DictionaryFile=$FREELINGSHARE/pt/maco.db
+LocutionsFile=$FREELINGSHARE/as/locucions.dat 
+QuantitiesFile=$FREELINGSHARE/as/quantities.dat
+AffixFile=$FREELINGSHARE/as/afixos.dat
+ProbabilityFile=$FREELINGSHARE/as/probabilitats.dat
+DictionaryFile=$FREELINGSHARE/as/maco.db
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
 #NER options
 NERecognition=basic
-NPDataFile=$FREELINGSHARE/pt/np.dat
+NPDataFile=$FREELINGSHARE/as/np.dat
 ## --- comment lines above and uncomment those below, if you want 
 ## --- a better NE recognizer (higer accuracy, lower speed)
 #NERecognition=bio
-#3PDataFile=$FREELINGSHARE/pt/ner/ner.dat
+#3PDataFile=$FREELINGSHARE/as/ner/ner.dat
 
 ## NEC options
 NEClassification=no
-NECFilePrefix=$FREELINGSHARE/pt/nec/nec
+NECFilePrefix=$FREELINGSHARE/as/nec/nec
 
 ## Sense annotation options (none,all,mfs)
 SenseAnnotation=none
-SenseFile=$FREELINGSHARE/pt/senses16.db
+SenseFile=$FREELINGSHARE/as/senses16.db
 DuplicateAnalysis=false
 
 #### Tagger options
 Tagger=hmm
-TaggerHMMFile=$FREELINGSHARE/pt/tagger.dat
-TaggerRelaxFile=$FREELINGSHARE/pt/constr_gram.dat
+TaggerHMMFile=$FREELINGSHARE/as/tagger.dat
+TaggerRelaxFile=$FREELINGSHARE/as/constr_gram.dat
 TaggerRelaxMaxIter=500
 TaggerRelaxScaleFactor=670.0
 TaggerRelaxEpsilon=0.001
@@ -100,13 +100,13 @@ TaggerRetokenize=yes
 TaggerForceSelect=retok
 
 #### Parser options
-GrammarFile=$FREELINGSHARE/pt/grammar-dep.dat
+GrammarFile=$FREELINGSHARE/as/grammar-dep.dat
 
 #### Dependence Parser options
 DepParser=txala
-DepTxalaFile=$FREELINGSHARE/pt/dep/dependences.dat
-DepMaltFile=$FREELINGSHARE/pt/malt/malt.dat
+DepTxalaFile=$FREELINGSHARE/as/dep/dependences.dat
+DepMaltFile=$FREELINGSHARE/as/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
-CorefFile=$FREELINGSHARE/pt/coref/coref.dat
+CorefFile=$FREELINGSHARE/as/coref/coref.dat
