--- a/data/config/cy.cfg
+++ b/data/config/cy.cfg
@@ -1,5 +1,5 @@
 ##
-#### default configuration file for English analyzer
+#### default configuration file for Welsch analyzer
 ##
 
 #### General options 
