--- a/data/config/gl.cfg
+++ b/data/config/gl.cfg
@@ -1,5 +1,5 @@
 ##
-#### default configuration file for Spanish analyzer
+#### default configuration file for Galician analyzer
 ##
 
 #### General options 
